# graph-mining-project-rostock

./: .gitignore  26.06.2026 note.txt  ISEBEL_download_wossidia_story_htmls.py  README.md  What we learned.md  analyze_iceland.py  convert_htmls_to_json.py  descriptions.md  isebel-iceland-co-occurence-edges.csv  isebel-iceland-co-occurence-nodes.csv  isebel-iceland-edges.csv  isebel-iceland-nodes.csv  isebel-mecklenburg-edges.csv  isebel-mecklenburg-nodes.csv  merge_graph_csvs.py  pyproject.toml
embed-proj/: analyze_communities.py  build_graph.py  compare_with_keywords.py  embed_stories.py  load_stories.py  requirements.txt  run_louvain.py  run_pipeline.py
keyword-keyword/: DIAGNOSIS_all_dataset.md  README.md  bigclam_analysis.py  comparison.py  girvan_newman_analysis.py  graph_utils.py  louvain_analysis.py  louvain_analysis_zoomed.py  metrics.py  run_community_detection.py  run_gn_all_regions.py  run_louvain_all_regions.py  synonyms.json  werewolf_comparison_denmark.txt  werewolf_comparison_mecklenburg.txt
keyword-keyword/gn_output/: girvan_newman_denmark.json  girvan_newman_iceland.json  girvan_newman_mecklenburg.json  girvan_newman_summary.json
keyword-keyword/louvain_output/: louvain_denmark.json  louvain_iceland.json  louvain_mecklenburg.json  louvain_merged.json  louvain_netherlands.json  louvain_summary.json
keyword-keyword/outputs/all/: graph_export_all.json  partition_agreement_all.txt  werewolf_comparison_all.txt
keyword-keyword/outputs/denmark/: partition_agreement_denmark.txt  werewolf_comparison_denmark.txt
keyword-keyword/viz/: build_explorer_html.py  export_data.py
(+8 files in other folders)
