[project]
name = "graph-mining-project-rostock"
version = "0.1.0"
description = "Graph mining project for keyword co-occurrence analysis"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib",
    "python-louvain",
    "karateclub",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
